--- a/Sparkfly.Main/Pages/QueuePage.resx
+++ b/Sparkfly.Main/Pages/QueuePage.resx
@@ -118,7 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="about_1" xml:space="preserve">
-    <value>Check in real time what you and your friends have voted for!</value>
+    <value>The priority queue is how Sparkfly manages your votes. You can send as many songs as your heart desires!</value>
+  </data>
+  <data name="about_2" xml:space="preserve">
+    <value>However, if that shy friend gets the courage and adds a song for the first time, know that their vote will have priority.</value>
   </data>
   <data name="page_title" xml:space="preserve">
     <value>Priority Queues</value>
