--- a/Sparkfly.Main/Pages/WelcomePage.resx
+++ b/Sparkfly.Main/Pages/WelcomePage.resx
@@ -126,6 +126,9 @@
   <data name="about_3" xml:space="preserve">
     <value>Just kidding, here we have space for every taste! From Metallica to Lady Gaga, make Sparkfly your home!</value>
   </data>
+  <data name="alert" xml:space="preserve">
+    <value>Please, to continue, write your name in the box above and try again!</value>
+  </data>
   <data name="btn_enter" xml:space="preserve">
     <value>LET ME IN!</value>
   </data>
