--- a/Sparkfly.Main/Components/MainContent.pt.resx
+++ b/Sparkfly.Main/Components/MainContent.pt.resx
@@ -117,52 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="about_1" xml:space="preserve">
-    <value>Hi, my name is Vinícius but you can call me Vini. I am a Computer Science student living in Brazil. This web app is a personal project that I created to sharpen my C# skills (pun very much intended!).</value>
-  </data>
-  <data name="about_2" xml:space="preserve">
-    <value>When I started my internship in 2022, I heard people talking about Blazor and how easy you could create Single Page Applications. The ideia behind Sparkfly was to create a service that would solve a common problem that my friends from college and from work were having.</value>
-  </data>
-  <data name="about_3" xml:space="preserve">
-    <value>Every Friday, when I am commuting to college, the van's driver allows us to listen to Spotify. Concidently, every Friday at work, we listen to some music in the office too. The issue is that if you want to suggest a song to play, you would have to ask the owner of the Spotify account which songs to play next. That's when I had the idea to create Sparkfly.</value>
-  </data>
-  <data name="about_4" xml:space="preserve">
-    <value>Also, since I decided to learn C# in 2022 I was thinking about a project I could build to put my skills in practice. Allied with my passion for listening to music, I was very pumped to start building this application and see my friends using it.</value>
-  </data>
-  <data name="about_5" xml:space="preserve">
-    <value>I really hope you enjoy and have some fun sharing your favorite songs with you friends! This project was made with many sleepless nights but with a lot of love, for sure!</value>
-  </data>
-  <data name="about_6" xml:space="preserve">
-    <value>If you have time, I'd be very happy if you visited my social medias!</value>
-  </data>
-  <data name="about_7" xml:space="preserve">
-    <value>Oh, and why Sparkfly as the name? Well, you can find the answer if you know where to look at, but I won't be the one telling you where. Good luck!</value>
-  </data>
-  <data name="github" xml:space="preserve">
-    <value>On my Github you can check previous projects I've worked on. (If you click the GitHub icon on the top right corner you'll be directed to projects's repo)</value>
-  </data>
-  <data name="hello" xml:space="preserve">
-    <value>Hello there!</value>
-  </data>
-  <data name="lastfm" xml:space="preserve">
-    <value>Lastly (another pun!), you can check the kinda music I'm into listening by checking my Last.fm profile. Spoiler alert: there's a lot of Taylor Swift!</value>
-  </data>
-  <data name="linkedin" xml:space="preserve">
-    <value>If you liked Sparkfly, please send me a message on LinkedIn telling me your thoughts.</value>
-  </data>
-  <data name="page_title" xml:space="preserve">
-    <value>About Sparkfly</value>
-  </data>
-  <data name="section_1" xml:space="preserve">
-    <value>A bit about me</value>
-  </data>
-  <data name="section_2" xml:space="preserve">
-    <value>The problem at hand</value>
-  </data>
-  <data name="section_3" xml:space="preserve">
-    <value>Let's keep in touch!</value>
-  </data>
-  <data name="social_media" xml:space="preserve">
-    <value>My social media profiles:</value>
+  <data name="signature" xml:space="preserve">
+    <value>Feito com ❤️ por Vini Bueno.</value>
   </data>
 </root>
